Add source and destination points

--- a/src/Graph/Components/Square.css
+++ b/src/Graph/Components/Square.css
@@ -4,3 +4,12 @@
     outline: 1px solid rgb(175, 216, 248);
     display: inline-block;
 }
+
+.node-source {
+    background-color: green;
+}
+
+.node-destination {
+    background-color: red;
+
+}
