--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,19 +1,51 @@
-.sidebar {
-    max-width: 20%;
-    background: #354052;
-    color: #adb5bd;
-    transition: all 0.5s;
+.sidebar-container {
+    position: absolute;
+    left: 0;
+    width: 14.40rem;
+    height: 100vh;
+    padding: 0.75rem;
+    background: #f3f4f4;
+    transition: width 350ms ease;
+    border-right: 1px solid #d4d8dd;
+    overflow-x: hidden;
 }
 
-.sidebar-header {
-    margin-top: none;
-    background: #313b4c;
-    color: #fff;
-    padding: 1em;
+.sidebar-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 0.9rem;
 }
   
+
+.items-list {
+    list-style: none;
+}
+
+.item-container {
+    margin-top: 0.5rem;
+    width: 100%;
+    padding: 0.5rem 0.25rem;
+    border-radius: 0.2rem;
+    cursor: pointer;
+}
+
+.item-wrapper {
+    display: flex;
+    align-items: center;
+    color: #7c7788;
+}
+
+.item-name {
+    margin-left: 0.5rem;
+    display: "block";
+    text-transform: capitalize;
+}
+
+
 p {
-    color: #fff;
+    color: #cf1010;
     padding: 10px;
     margin: 0px;
 }
