Create item list component

--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -2,12 +2,15 @@
     position: absolute;
     left: 0;
     width: 14.40rem;
-    height: 100vh;
+    height: 81vh;
     padding: 0.75rem;
     background: #f3f4f4;
     transition: width 350ms ease;
     border-right: 1px solid #d4d8dd;
     overflow-x: hidden;
+}
+.item-active {
+    background-color: #dbe4f3;
 }
 
 .sidebar-wrapper {
@@ -20,6 +23,7 @@
   
 
 .items-list {
+    padding-left: 0;
     list-style: none;
 }
 
