--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -67,3 +67,25 @@ li a.dropdown-toggle::after {
 }
   
   
+
+.btn {
+    margin: 1rem 1rem 0 0;
+    display: flex;
+    padding: 0.5rem 0.75rem;
+    gap: 0.5rem;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+    border: 1px solid #808080;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+  }
